{{$NEXT}}

- Require Path::Class 0.27 for tests. This is the first version to include
  `tempdir`.

- Really remove dependency on Math::Int128. There was still some test code
  using it that caused it to be required. Reported by Victor Efimov. GH #23.


1.000007 2015-05-27

- Require version 1.87 of Socket (same as perl 5.12) to minimize XS dependency.
  On Windows, Socket version 2.019 will be installed (for inet_pton emulation).


1.000006 2015-05-22

- Require Scalar::Util 1.42 for tests,  GH #16


1.000005 2015-05-22

- Require newer version of Socket for inet_pton on perl 5.10


1.000004 2015-04-30

- `MaxMind::DB::Reader` now has no XS dependencies. Previously `Net::Works`
  was used for validation and `Math::Int128` was used to return larger
  integers. Integers larger than maximum unsigned integer supported by your
  `perl` will now be returned as `Math::BigInt` objects. If you are dealing
  with many lookups of a record with such values and cannot install
  `MaxMind::DB::Reader::XS`, you may wish to install `Math::BigInt::GMP`.

- Fixed a bug in the mmdb-dump-database script. It tried to call methods on
  the JSON module when it meant to use JSON::PP.

- `mmdb-dump-database` was moved from `bin` to `eg`.


1.000003 2014-12-17

- The previous release somehow included junk from an even older release in a
  MaxMind-DB-Reader-1.00001 subdirectory. Reported by Daisuke Maki. GH #14.


1.000002 2014-12-09

- The MaxMind::DB::Verifier module accidentally included a 5.14-ism, which
  prevented this module from installing on earlier Perls.


1.000001 2014-12-08

- The mmdb-dump-database script now skips the IPv4 alias networks
  (::ffff:0:0/96 and 2002::/16).

- MaxMind::DB::Reader::Role::HasMetadata no longer unintentionally inflates a
  Moose metaclass.


1.000000 2014-09-22

- First production release. No non-test changes.


0.060001 2014-09-15

- Changed an error message to match the error string used by