@@ -1,8 +1,0 @@
-#!/usr/bin/env perl
-
-use strict;
-use warnings;
-
-use MaxMind::DB::Verifier;
-
-exit !MaxMind::DB::Verifier->new_with_options()->run();
